# gprMax-app

./: .gitignore  LICENSE  README.md  SUPPORT.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ADVANCED_EDITOR_FOUNDATION.md  ALPHA_0_2_UX_SIGNOFF.md  ALPHA_RELEASE_NOTES.md  ARCHITECTURE.md  BUNDLED_LICENSE_REVIEW.md  CURRENT_STATE.md  DECISIONS.md  FIRST_RELEASE_READINESS.md  GPRMAX_INTEGRATION.md  INSTALLATION_STRATEGY.md  MODEL_EDITOR.md  PUBLIC_RELEASE_CHECKLIST.md  RESULTS_VIEWER.md  ROADMAP.md  RUNTIME_AND_PACKAGING.md  TECHNICAL_GUIDE.md  TECH_STACK.md  UI_WORKSTREAM.md
examples/: README.md  summary.json
tests/: test_advanced_panel.py  test_artifact_locator.py  test_artifact_store.py  test_bscan_builder.py  test_bscan_image_widget.py  test_command_builder.py  test_command_registry.py  test_documentation_dialog.py  test_engine_locator.py  test_input_generator.py  test_input_preview_service.py  test_libraries_panel.py  test_localization_service.py  test_materials_panel.py  test_model_editor_service.py  test_path_manager.py  test_project_service.py  test_project_store.py  test_project_view_smoke.py  test_results_reader.py  test_results_services.py  test_results_view.py  test_run_repository.py  test_runtime_diagnostics.py  test_runtime_e2e_smoke.py  test_scene_canvas_panel.py  test_settings_dialog.py  test_settings_manager.py  test_settings_view.py  test_simulation_service.py  test_simulation_view.py  test_validation.py
tools/: collect_support_bundle.py  run_tests.py
(+148 files in other folders)
